--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URI="mongodb+srv://lovejared91@yahoo.com:Callofduty*2322@thoughts.n9z04.mongodb.net/sample_mflix?retryWrites=true&w=majority"
+REACT_APP_SECRET_KEY = "mysecretsshhhhh"
